--- a/Task-2/views/login.ejs
+++ b/Task-2/views/login.ejs
@@ -57,7 +57,7 @@
         <h1 class="sub-heading fw-bold">Log In to Your Account!</h1>
 
         <div class="first-child row">
-          <form>
+          <form action="/home">
             <div class="column">
               <div class="form-floating">
                 <input
