--- a/Task-2/views/signup.ejs
+++ b/Task-2/views/signup.ejs
@@ -57,7 +57,7 @@
         <h1 class="sub-heading fw-bold">Sign Up</h1>
 
         <div class="first-child row">
-          <form>
+          <form action="/home">
             <div class="row g-2">
               <div class="col-md">
                 <div class="form-floating">
