--- a/Task-2/views/contact.ejs
+++ b/Task-2/views/contact.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header'); -%>
       <div class="contact row">
-        <form>
+        <form action="home">
             <div class="mb-3">
                 <label for="exampleInputName1" class="form-label">Name</label>
                 <input type="text" class="form-control" id="exampleInputName1" aria-describedby="nameHelp">
