--- a/Task-2/views/front.ejs
+++ b/Task-2/views/front.ejs
@@ -49,6 +49,7 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
 
     <link href="css/home.css" rel="stylesheet" />
+    <link href="css/front.css" rel="stylesheet" />
     <link href="css/contact.css" rel="stylesheet" />
     <link href="css/details.css" rel="stylesheet" />
     <link href="css/profile.css" rel="stylesheet" />
@@ -58,9 +59,9 @@
   </head>
   <body>
     <div class="back-img">
-      <nav class="navbar navbar-expand-lg navbar-custom bg-transparent">
+      <!-- <nav class="navbar navbar-expand-lg navbar-custom bg-transparent">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/ome">Edu-4ol</a>
+          <a class="navbar-brand" href="/">Edu-4ol</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -92,15 +93,15 @@
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li>
-                    <a class="dropdown-item" href="/home">Development</a>
+                    <a class="dropdown-item" href="/">Development</a>
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a class="dropdown-item" href="/home">IT</a>
+                    <a class="dropdown-item" href="/">IT</a>
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a class="dropdown-item" href="/home">Buisness</a>
+                    <a class="dropdown-item" href="/">Buisness</a>
                   </li>
                 </ul>
               </li>
@@ -122,111 +123,67 @@
             </form>
           </div>
         </div>
+      </nav> -->
+      <nav class="navbar navbar-light bg-transparent">
+        <div class="container">
+          <a class="navbar-brand logo" href="/">
+            <h2 class="logo">Education 4 ol</h2>
+          </a>
+          <form class="d-flex">
+            <button
+              class="btn btn-outline-secondary logbtn"
+              onclick="location.href='/signup'"
+              type="button"
+            >
+              Join now
+            </button>
+            <button
+              class="btn btn-outline-secondary logbtn"
+              onclick="location.href='/login'"
+              type="button"
+            >
+              Sign in
+            </button>
+          </form>
+        </div>
       </nav>
-      <div class="">
-        <h1 class="c">Courses from ₹385</h1>
-        <h2>
-          Shop our Love to Learn Sale by Aug. 18<br />
-          to get courses you care about.
-        </h2>
-      </div>
-      <div
-        id="carouselExampleCaptions"
-        class="carousel slide"
-        data-bs-ride="carousel"
-      >
-        <div class="carousel-indicators">
-          <button
-            type="button"
-            data-bs-target="#carouselExampleCaptions"
-            data-bs-slide-to="0"
-            class="active"
-            aria-current="true"
-            aria-label="Slide 1"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselExampleCaptions"
-            data-bs-slide-to="1"
-            aria-label="Slide 2"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselExampleCaptions"
-            data-bs-slide-to="2"
-            aria-label="Slide 3"
-          ></button>
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img
-              src="https://images.unsplash.com/photo-1497215728101-856f4ea42174?ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80"
-              class="d-block w-100"
-              alt="..."
-              width="200"
-              height="300"
-            />
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Web Development</h5>
-              <p>
-                Become a full-stack web developer with just one course. HTML,
-                CSS, Javascript, Node, React, MongoDB and more!
-              </p>
+      <div class="infoo">
+        <h1 class="welcome">Welcome to our Professional Community</h1>
+        <h1>
+          Maximise Your Profit and<br />
+          Gain Knowledge With Best Courses.
+        </h1>
+        <!-- <h3>
+          Apply for your next short term loan or investment with <br />our
+          skilled advisor
+        </h3> -->
+        <div class="row createbut">
+          <div class="col-6 text-lefts">
+            <div class="previous">
+              <button
+                class="signbtn btn btn-primary"
+                onclick="location.href='/signup' "
+                type="submit"
+              >
+                <span class="glyphicon glyphicon-chevron-left"
+                  >Create a account</span
+                >
+              </button>
             </div>
           </div>
-          <div class="carousel-item">
-            <img
-              src="https://images.unsplash.com/photo-1628928180996-3c1f6a04d740?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80"
-              class="d-block w-100"
-              alt="..."
-              width="200"
-              height="300"
-            />
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Android Development</h5>
-              <p>
-                Learn Android O App Development using Java & Kotlin - build real
-                apps including Super Mario Run, Whatsapp and Instagram!
-              </p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img
-              src="https://images.unsplash.com/photo-1628870426845-a96c81c1d1e7?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80"
-              class="d-block w-100"
-              alt="..."
-              width="200"
-              height="300"
-            />
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Data Scientist</h5>
-              <p>
-                Learn how to wrangle Big Data for Machine Learning using Python
-                in PySpark taught by an industry expert!
-              </p>
+          <div class="col-6 text-rights">
+            <div class="next">
+              <button
+                class="signbtn btn btn-primary"
+                onclick="location.href='/login'"
+                type="submit"
+              >
+                <span class="glyphicon glyphicon-chevron-left">Log In</span>
+              </button>
             </div>
           </div>
         </div>
-        <button
-          class="carousel-control-prev"
-          type="button"
-          data-bs-target="#carouselExampleCaptions"
-          data-bs-slide="prev"
-        >
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button
-          class="carousel-control-next"
-          type="button"
-          data-bs-target="#carouselExampleCaptions"
-          data-bs-slide="next"
-        >
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
       </div>
-
       <footer class="footer footer-transparent mt-auto py-3">
         <div class="container text-center">
           © 2020 Copyright&nbsp;
