--- a/Task-2/views/history.ejs
+++ b/Task-2/views/history.ejs
@@ -60,7 +60,7 @@
     <div class="back-img" style="overflow: scroll; height: 600px">
       <nav class="navbar navbar-expand-lg navbar-custom bg-transparent">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/">Edu-4ol</a>
+          <a class="navbar-brand" href="/home">Edu-4ol</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -92,15 +92,15 @@
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li>
-                    <a class="dropdown-item" href="/">Development</a>
+                    <a class="dropdown-item" href="/home">Development</a>
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a class="dropdown-item" href="/">IT</a>
+                    <a class="dropdown-item" href="/home">IT</a>
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a class="dropdown-item" href="/">Buisness</a>
+                    <a class="dropdown-item" href="/home">Buisness</a>
                   </li>
                 </ul>
               </li>
