--- a/Task-2/views/home.ejs
+++ b/Task-2/views/home.ejs
@@ -60,7 +60,7 @@
     <div class="back-img">
       <nav class="navbar navbar-expand-lg navbar-custom bg-transparent">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/ome">Edu-4ol</a>
+          <a class="navbar-brand" href="/home">Edu-4ol</a>
           <button
             class="navbar-toggler"
             type="button"
