--- a/Task-2/views/details.ejs
+++ b/Task-2/views/details.ejs
@@ -119,7 +119,7 @@
                 class="profile-img"
                 alt="profile pic"
               />
-              <a class="nav-link" href="/profile">Soumyajit Roy</a>
+              <a class="nav-link" href="/profile"><%= proname %></a>
             </form>
           </div>
         </div>
