--- a/Task-2/views/history.ejs
+++ b/Task-2/views/history.ejs
@@ -92,15 +92,15 @@
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li>
-                    <a class="dropdown-item" href="/home">Development</a>
+                    <a class="dropdown-item" href="/details#webdevelopment">Web Development</a>
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a class="dropdown-item" href="/home">IT</a>
+                    <a class="dropdown-item" href="/details#android">Android Debvelopment</a>
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a class="dropdown-item" href="/home">Buisness</a>
+                    <a class="dropdown-item" href="/home">Machine Learning</a>
                   </li>
                 </ul>
               </li>
@@ -118,7 +118,7 @@
                 class="profile-img"
                 alt="profile pic"
               />
-              <a class="nav-link" href="/profile">Soumyajit Roy</a>
+              <a class="nav-link" href="/profile"><%= proname %></a>
             </form>
           </div>
         </div>
