--- a/Task-2/views/partials/header.ejs
+++ b/Task-2/views/partials/header.ejs
@@ -117,7 +117,7 @@
                       class="profile-img"
                       alt="profile pic"
                     />
-                    <a class="nav-link" href="/profile">Soumyajit Roy</a>
+                    <a class="nav-link" href="/profile"><%= proname %></a>
                 </form>
               </div>
             </div>
