--- a/Task-2/views/details.ejs
+++ b/Task-2/views/details.ejs
@@ -202,7 +202,7 @@
           <div class="card cardss" style="width: 200px">
             <form action="/details" method="post">
               <img
-                src="https://images.unsplash.com/photo-1629049223901-d3416d318091?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
+                src="https://images.unsplash.com/photo-1580894908361-967195033215?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=750&q=80"
                 class="card-img-tops"
                 alt="image"
               />
@@ -215,7 +215,7 @@
                   4.6⭐⭐⭐⭐⭐(16,959)<br />
                   Current price₹8,640<br />
                 </p>
-                <input type="hidden" name="img"value="https://images.unsplash.com/photo-1629049223901-d3416d318091?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"></input>
+                <input type="hidden" name="img"value="https://images.unsplash.com/photo-1580894908361-967195033215?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=750&q=80"></input>
                 <input type="hidden" name="title"value="The Complete Angular Course: Beginner to Advanced"></input>
                 <a href="#" class="btn btn-sm btn-primary">Details</a>
                 <button class="btn btn-sm btn-danger" type="submit">Buy</button>
@@ -225,7 +225,7 @@
           <div class="card cardss" style="width: 200px">
             <form action="/details" method="post">
               <img
-                src="https://images.unsplash.com/photo-1629050724724-5fa79d642bb6?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=761&q=80"
+                src="https://images.unsplash.com/photo-1527427337751-fdca2f128ce5?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80"
                 class="card-img-tops"
                 alt="image"
               />
@@ -238,7 +238,7 @@
                   4.6⭐⭐⭐⭐⭐(16,959)<br />
                   Current price₹8,640<br />
                 </p>
-                <input type="hidden" name="img"value="https://images.unsplash.com/photo-1629050724724-5fa79d642bb6?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=761&q=80"></input>
+                <input type="hidden" name="img"value="https://images.unsplash.com/photo-1527427337751-fdca2f128ce5?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80"></input>
                 <input type="hidden" name="title"value="Learn and Understand AngularJS"></input>
                 <a href="#" class="btn btn-sm btn-primary">Details</a>
                 <button class="btn btn-sm btn-danger" type="submit">Buy</button>
@@ -274,7 +274,7 @@
           <div class="card cardss" style="width: 200px">
             <form action="/details" method="post">
               <img
-                src="https://images.unsplash.com/photo-1524758631624-e2822e304c36?ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80"
+                src="https://images.unsplash.com/photo-1534665482403-a909d0d97c67?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80"
                 class="card-img-tops"
                 alt="image"
               />
@@ -287,7 +287,7 @@
                   4.6⭐⭐⭐⭐⭐(16,959)<br />
                   Current price₹8,640<br />
                 </p>
-                <input type="hidden" name="img"value="https://images.unsplash.com/photo-1524758631624-e2822e304c36?ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80"></input>
+                <input type="hidden" name="img"value="https://images.unsplash.com/photo-1534665482403-a909d0d97c67?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80"></input>
                 <input type="hidden" name="title"value="Android App Development with Dependencies"></input>
                 <a href="#" class="btn btn-sm btn-primary">Details</a>
                 <button class="btn btn-sm btn-danger" type="submit">Buy</button>
@@ -297,7 +297,7 @@
           <div class="card cardss" style="width: 200px">
             <form action="/details" method="post">
               <img
-                src="https://images.unsplash.com/photo-1629010307583-f27ae0f9662e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80"
+                src="https://images.unsplash.com/photo-1555949963-ff9fe0c870eb?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80"
                 class="card-img-tops"
                 alt="image"
               />
@@ -310,7 +310,7 @@
                   4.6⭐⭐⭐⭐⭐(16,959)<br />
                   Current price₹8,640<br />
                 </p>
-                <input type="hidden" name="img"value="https://images.unsplash.com/photo-1629010307583-f27ae0f9662e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80"></input>
+                <input type="hidden" name="img"value="https://images.unsplash.com/photo-1555949963-ff9fe0c870eb?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80"></input>
                 <input type="hidden" name="title"value="Android App Development Course"></input>
                 <a href="#" class="btn btn-sm btn-primary">Details</a>
                 <button class="btn btn-sm btn-danger buy" type="submit">
@@ -322,7 +322,7 @@
           <div class="card cardss" style="width: 200px">
             <form action="/details" method="post">
               <img
-                src="https://images.unsplash.com/photo-1629015926131-5a346e14855f?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80"
+                src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=752&q=80"
                 class="card-img-tops"
                 alt="image"
               />
@@ -335,7 +335,7 @@
                   4.6⭐⭐⭐⭐⭐(16,959)<br />
                   Current price₹8,640<br />
                 </p>
-                <input type="hidden" name="img"value="https://images.unsplash.com/photo-1629015926131-5a346e14855f?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80"></input>
+                <input type="hidden" name="img"value="https://images.unsplash.com/photo-1498050108023-c5249f4df085?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=752&q=80"></input>
                 <input type="hidden" name="title"value="Android App Development Masterclass"></input>
                 <a href="#" class="btn btn-sm btn-primary">Details</a>
                 <button class="btn btn-sm btn-danger" type="submit">Buy</button>
@@ -360,6 +360,126 @@
                 </p>
                 <input type="hidden" name="img"value="https://images.unsplash.com/photo-1586227740560-8cf2732c1531?ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=828&q=80"></input>
                 <input type="hidden" name="title"value="The complete Java Android App development Bootcamp"></input>
+                <a href="#" class="btn btn-sm btn-primary">Details</a>
+                <button class="btn btn-sm btn-danger" type="submit">Buy</button>
+              </div>
+            </form>
+          </div>
+        </div>
+        <div id="machine" class="row coursess">
+          <h2 class="programming">Machine Learning</h2>
+          <div class="card cardss" style="width: 200px">
+            <form action="/details" method="post">
+              <img
+                src="https://images.unsplash.com/photo-1488590528505-98d2b5aba04b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80"
+                class="card-img-tops"
+                alt="image"
+              />
+              <div class="card-body det">
+                <h1 class="card-title courses-title">
+                  Machine Learning A-Z™: Hands-On Python & R In Data Science
+                </h1>
+                <p class="prices card-text">
+                  Andrei Neagoie<br />
+                  4.6⭐⭐⭐⭐⭐(16,959)<br />
+                  Current price₹8,640<br />
+                </p>
+                <input type="hidden" name="img"value="https://images.unsplash.com/photo-1488590528505-98d2b5aba04b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80"></input>
+                <input type="hidden" name="title"value="Machine Learning A-Z™: Hands-On Python & R In Data Science"></input>
+                <a href="#" class="btn btn-sm btn-primary">Details</a>
+                <button class="btn btn-sm btn-danger" type="submit">Buy</button>
+              </div>
+            </form>
+          </div>
+          <div class="card cardss" style="width: 200px">
+            <form action="/details" method="post">
+              <img
+                src="https://images.unsplash.com/photo-1593642634443-44adaa06623a?ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=625&q=80"
+                class="card-img-tops"
+                alt="image"
+              />
+              <div class="card-body det">
+                <h1 class="card-title courses-title">
+                  Python for Data Science and Machine Learning Bootcamp
+                </h1>
+                <p class="prices card-text">
+                  Andrei Neagoie<br />
+                  4.6⭐⭐⭐⭐⭐(16,959)<br />
+                  Current price₹8,640<br />
+                </p>
+                <input type="hidden" name="img"value="https://images.unsplash.com/photo-1593642634443-44adaa06623a?ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=625&q=80"></input>
+                <input type="hidden" name="title"value="Python for Data Science and Machine Learning Bootcamp"></input>
+                <a href="#" class="btn btn-sm btn-primary">Details</a>
+                <button class="btn btn-sm btn-danger" type="submit">Buy</button>
+              </div>
+            </form>
+          </div>
+          <div class="card cardss" style="width: 200px">
+            <form action="/details" method="post">
+              <img
+                src="https://images.unsplash.com/photo-1531297484001-80022131f5a1?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=707&q=80"
+                class="card-img-tops"
+                alt="image"
+              />
+              <div class="card-body det">
+                <h1 class="card-title courses-title">
+                  Machine Learning, Data Science and Deep Learning with Python
+                </h1>
+                <p class="prices card-text">
+                  Andrei Neagoie<br />
+                  4.6⭐⭐⭐⭐⭐(16,959)<br />
+                  Current price₹8,640<br />
+                </p>
+                <input type="hidden" name="img"value="https://images.unsplash.com/photo-1531297484001-80022131f5a1?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=707&q=80"></input>
+                <input type="hidden" name="title"value="Machine Learning, Data Science and Deep Learning with Python"></input>
+                <a href="#" class="btn btn-sm btn-primary">Details</a>
+                <button class="btn btn-sm btn-danger buy" type="submit">
+                  Buy
+                </button>
+              </div>
+            </form>
+          </div>
+          <div class="card cardss" style="width: 200px">
+            <form action="/details" method="post">
+              <img
+                src="https://images.unsplash.com/photo-1588702547923-7093a6c3ba33?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80"
+                class="card-img-tops"
+                alt="image"
+              />
+              <div class="card-body det">
+                <h1 class="card-title courses-title">
+                  Complete Machine Learning & Data Science Bootcamp 2021
+                </h1>
+                <p class="prices card-text">
+                  Andrei Neagoie<br />
+                  4.6⭐⭐⭐⭐⭐(16,959)<br />
+                  Current price₹8,640<br />
+                </p>
+                <input type="hidden" name="img"value="https://images.unsplash.com/photo-1588702547923-7093a6c3ba33?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80"></input>
+                <input type="hidden" name="title"value="Complete Machine Learning & Data Science Bootcamp 2021"></input>
+                <a href="#" class="btn btn-sm btn-primary">Details</a>
+                <button class="btn btn-sm btn-danger" type="submit">Buy</button>
+              </div>
+            </form>
+          </div>
+          <div class="card cardss" style="width: 200px">
+            <form action="/details" method="post">
+              <img
+                src="https://images.unsplash.com/photo-1593642702909-dec73df255d7?ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80"
+                class="card-img-tops"
+                alt="image"
+              />
+              <div class="card-body det">
+                <h1 class="card-title courses-title">
+                  Data Science and Machine Learning Bootcamp with R
+                </h1>
+                <p class="prices card-text">
+                  Andrei Neagoie<br />
+                  4.6⭐⭐⭐⭐⭐(16,959)<br />
+                  Current price₹8,640<br />
+                </p>
+                <input type="hidden" name="img"value="https://images.unsplash.com/photo-1593642702909-dec73df255d7?ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80"></input>
+                <input type="hidden" name="title"value="Data Science and Machine Learning Bootcamp with R"></input>
                 <a href="#" class="btn btn-sm btn-primary">Details</a>
                 <button class="btn btn-sm btn-danger" type="submit">Buy</button>
               </div>
