--- a/Task-2/views/history.ejs
+++ b/Task-2/views/history.ejs
@@ -100,7 +100,7 @@
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a class="dropdown-item" href="/home">Machine Learning</a>
+                    <a class="dropdown-item" href="/details#machine">Machine Learning</a>
                   </li>
                 </ul>
               </li>
