--- a/Task-2/views/partials/header.ejs
+++ b/Task-2/views/partials/header.ejs
@@ -99,7 +99,7 @@
                       </li>
                       <li><hr class="dropdown-divider" /></li>
                       <li>
-                        <a class="dropdown-item" href="/details">Machine Learning</a>
+                        <a class="dropdown-item" href="/details#machine">Machine Learning</a>
                       </li>
                     </ul>
                   </li>
